@@ -1,5 +1,6 @@
 Changes for Perl programming language extension Parse-CPAN-Meta
 
+        - Support PERL_JSON_BACKEND environment (defaulting to JSON::PP)
         - Update Makefile.PL to install to sitelib on Perl 5.12+
 
 1.41_03 Fri Dec 17 2010
